# iman-game-bot

./: .gitignore  .revive-bot.yml  env_vars  pyproject.toml  req.txt  restart.sh
bot_init/: admin.py  markup.py  models.py  schemas.py  service.py  utils.py  views.py
bot_init/migrations/: 0002_auto_20200919_1425.py  0002_auto_20201006_1757.py  0003_auto_20200919_1609.py  0003_auto_20201006_1757.py  0004_auto_20200919_1735.py  0004_subscriber_step.py  0005_auto_20201006_1853.py  0005_remove_subscriber_points.py  0006_adminmessage.py  0006_auto_20201011_1940.py  0007_auto_20201011_1953.py  0007_subscriber_day.py  0008_message_is_removed.py  0008_message_key.py  0009_auto_20201017_1754.py  0009_subscriber_level.py  0010_auto_20201003_1338.py  0010_auto_20201031_1859.py  0011_auto_20201117_1404.py  0011_auto_20201118_1321.py  0011_auto_20201118_2236.py  0012_merge_20201118_2349.py  0013_merge_20201119_2334.py
bot_init/services/: handle_service.py
config/: __init__.py  celery.py  settings.py  urls.py
deploy/: gunicorn.conf.py  iman_nginx.conf  supervisor_iman.conf  supervisor_iman_worker.conf
events/: models.py  service.py
events/migrations/: 0001_initial.py
game/: admin.py  models.py  schemas.py  service.py  tasks.py  tests.py
game/migrations/: 0001_initial.py  0002_auto_20201006_1834.py  0002_pointsrecord.py  0003_dailytask.py  0003_recorddailytask_complexity.py  0004_auto_20200926_1211.py  0004_auto_20201007_1405.py  0005_auto_20201007_1633.py  0005_recorddailytask.py  0006_recorddailytask_is_selected.py  0006_reminder.py  0007_auto_20200926_1504.py  (+10 more)
(+13 files in other folders)
