[tool.poetry]
name = "iman-game-bot"
version = "0.1.0"
description = ""
authors = ["Almaz Ilaletdinov <a.ilaletdinov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = "5.0.6"
celery = "5.4.0"
python-dotenv = "1.0.1"
requests = "^2.32.3"
loguru = "^0.7.2"
psycopg2-binary = "^2.9.9"
pytelegrambotapi = "^4.20.0"
pillow = "^10.4.0"
whitenoise = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
